tests/scan/fixtures/validation/negative/clean_maven_typosquat_unique/src/main/java/com/example/zzz/CleanLib.java
package com.example.zzz;

public class CleanLib {
    public int add(int a, int b) {
        return a + b;
    }
}
